@@ -17,6 +17,14 @@
 % ----------------------------------------------------------------------------
 
 % ----------------------------------------------------------------------------
+\membersection{wxHTTP::GetResponse}\label{wxhttpgetresponse}
+
+\constfunc{int}{GetResponse}{\void}
+
+Returns the HTTP response code returned by the server. Please refer to the RFC
+2616 for the list of the responses.
+
+
 \membersection{wxHTTP::GetInputStream}\label{wxhttpgetinputstream}
 
 \func{wxInputStream *}{GetInputStream}{\param{const wxString\&}{ path}}
